# ProjetoPI-Dupla

./: .pdm-python  db.sqlite3  pyproject.toml
config/: settings.py  urls.py
livraria/: admin.py  models.py  serializers.py  views.py
livraria/migrations/: 0001_initial.py
